# ProjectDoctor

./: .gitignore  README.md  pyproject.toml  setup.py
projectdoctor/: analyzer.py  cli.py  reporter.py  score.py
projectdoctor/detectors/: circular_import.py  complexity.py  dead_code.py  duplicate_code.py  file_size.py  long_function.py  structure.py
tests/: base.py  test_detectors.py  test_score.py
